--- a/css/styling.css
+++ b/css/styling.css
@@ -23,6 +23,13 @@ header{
 
 }
 
+.dark{
+
+    padding: 15px;
+    background: #35424a;
+    color:white;
+    
+}
 header a {
     color: white;
     text-decoration: none;
@@ -69,8 +76,8 @@ header a:hover{
 }
 #showcases {
 min-height: 400px;
-background: url('../images/showecase.jpeg') no-repeat 200 -200px;
-color:black;
+background: url('../images/showecase.jpg') no-repeat 0 -200px;
+color: rgb(97, 97, 104);
 }
 
 #showcases h1{
@@ -133,4 +140,61 @@ footer{
     text-align: center;
 }
 
+article#main-col{
+    float: left;
+    width:65%;
+    padding: 5px;
+}
+aside#sidebare{
 
+    float: right;
+    width: 30%;
+    margin-top: 10px;
+}
+aside#sidebare .quote input ,aside#sidebare .quote textarea{
+    width: 90%;
+    padding:5px;
+} 
+ul#services li{
+    list-style: none;
+    padding: 20px;
+    border: #cccccc solid 1px;
+    margin-bottom: 5px;
+    background: #e6e6e6;
+}
+
+@media(max-width : 768px){
+    header #branding,
+    header nav,
+    header nav li, 
+    #newsletter h1 ,
+    #newsletter form,
+    #box .box,
+    article#main-col,
+    aside#sidebare
+    {
+    float: none;
+    text-align: center;
+    width: 100%;
+
+    }
+    header{
+        padding-bottom: 20px;
+
+    }
+    #showcase h1{
+        margin-top: 40px;
+    }
+    #newsletter button,
+    .quote button {
+        display: block;
+        width: 100%
+
+    }
+    #newsletter form input[type="email"]{
+        width:100%;
+        margin-bottom: 5px;
+
+    }
+
+}
